<resources>
    <string name="app_name">Seccion04Curso</string>
    <string name="button_to_cycle">1. To Life Cycle Event</string>
    <string name="button_to_click">2. To Click Events</string>
    <string name="button_to_android_extensions">3. To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4. To Picasso</string>
    <string name="button_to_list_view">5. To List View</string>
    <string name="button_to_intents">6. To Intents</string>
    <string name="button_to_permissions">7. To Permissions</string>
    <string name="button_to_shared_preferences">8. To Shared Preferences</string>
    <string name="button_to_extension_functions">9. To Extension Function</string>
    <string name="button_click_xml">Click By XML</string>
    <string name="button_click_line">Click In Line</string>
    <string name="button_multi1">Multiple Buttons 1</string>
    <string name="button_multi2">Multiple Buttons 2</string>
    <string name="button_multi3">Multiple Buttons 3</string>
    <string name="button_kat_id">Button By FindViewById</string>
    <string name="button_kat_kat">Button By kat</string>
    <string name="button_intent_extras">Intent With Extras</string>
    <string name="button_intent_flags">Intent With Flags</string>
    <string name="button_intent_object">Intent With Object</string>
    <string name="button_back">Go Back</string>
    <string name="button_take_picture">Take a Picture</string>
    <string name="preferences_name_hint">Type name here</string>
    <string name="preferences_age_hint">Type Age here</string>
    <string name="preferences_button_save">Save</string>
    <string name="button_Toast">Toast</string>
    <string name="button_SnackBar">Snack Bar</string>
    <string name="button_Load_By_Url">Load by Url</string>
    <string name="button_Go_To_Activity">Go to Activity</string>
    <string name="genericMessage">me vale vrga puñeton </string>
</resources>
